--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -1,16 +1,47 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="unb.mdsgpp.qualcurso.MainActivity$PlaceholderFragment" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    tools:context="unb.mdsgpp.qualcurso.EvaluationDetailFragment" >
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="78dp"  >
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/university"
+            android:layout_width="140dp"
+            android:layout_height="65dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/university_acronym"
+            android:background="@color/medium_green"
+            android:ems="10"
+            android:fontFamily="@string/title_section1"
+            android:gravity="center|fill"
+            android:padding="15dp"
+            android:text="@string/university"
+            android:textColor="@color/medium_dark_green"
+            android:textSize="@dimen/title_dimension"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/university_acronym"
+            android:layout_width="140dp"
+            android:layout_height="65dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/medium_green"
+            android:ems="10"
+            android:fontFamily="@string/title_section1"
+            android:gravity="left|fill"
+            android:textColor="@color/white"
+            android:textSize="@dimen/university_dimension"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+</LinearLayout>
