--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,5 +9,7 @@
          https://developer.android.com/design/patterns/navigation-drawer.html
     -->
     <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="title_dimension">24dp</dimen>
+    <dimen name="university_dimension">23dp</dimen>
 
 </resources>
