--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="white">#FFFFFF</color>
     <color name="medium_green">#32CD99</color>
     <color name="medium_dark_green">#4A766E</color>
+    <color name="black">#000000</color>
+    <color name="dark_gray">#808080</color>
+    <color name="gainsboro">#D9D9F3</color>
 
 </resources>
