--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -158,6 +158,40 @@
 	               android:textColor="@color/black"
 	               android:textSize="@dimen/subtitle_dimension"
 	               android:textStyle="bold" />
+	           
+	           <TextView
+            	    android:id="@+id/indicator3"
+            	    android:layout_width="50dp"
+            	    android:layout_height="40dp"
+            	    android:layout_alignParentRight="true"
+            	    android:layout_below="@+id/indicator2"
+            	    android:layout_marginTop="5dp"
+            	    android:background="@color/gainsboro"
+            	    android:ems="10"
+            	    android:fontFamily="@string/title_section1"
+            	    android:gravity="center"
+            	    android:padding="10dp"
+            	    android:textColor="@color/black"
+            	    android:textSize="@dimen/subtitle_dimension"
+            	    android:textStyle="bold" />
+	           
+	           <TextView
+            	    android:id="@+id/indicator3_text"
+            	    android:layout_width="match_parent"
+            	    android:layout_height="40dp"
+            	    android:layout_alignParentLeft="true"
+            	    android:layout_alignTop="@+id/indicator3"
+            	    android:layout_toLeftOf="@id/indicator3"
+            	    android:background="@color/gainsboro"
+            	    android:ems="10"
+            	    android:fontFamily="@string/title_section1"
+            	    android:gravity="left"
+            	    android:padding="10dp"
+            	    android:text="@string/year_concept"
+            	    android:textColor="@color/black"
+            	    android:textSize="@dimen/subtitle_dimension"
+            	    android:textStyle="bold" />
+	           
 
 	        </RelativeLayout>
 	    </LinearLayout>
