Creating one indicator field of the layout project

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -192,6 +192,39 @@
             	    android:textSize="@dimen/subtitle_dimension"
             	    android:textStyle="bold" />
 	           
+	           <TextView
+                	android:id="@+id/indicator4"
+                	android:layout_width="50dp"
+                	android:layout_height="40dp"
+                	android:layout_alignParentRight="true"
+                	android:layout_below="@+id/indicator3"
+                	android:layout_marginTop="5dp"
+                	android:background="@color/gainsboro"
+                	android:ems="10"
+                	android:fontFamily="@string/title_section1"
+	                android:gravity="center"
+                	android:padding="10dp"
+                	android:textColor="@color/black"
+                	android:textSize="@dimen/subtitle_dimension"
+                	android:textStyle="bold" />
+	           
+	           <TextView
+            	    android:id="@+id/indicator4_text"
+            	    android:layout_width="match_parent"
+            	    android:layout_height="40dp"
+            	    android:layout_alignParentLeft="true"
+            	    android:layout_alignTop="@+id/indicator4"
+            	    android:layout_toLeftOf="@id/indicator4"
+            	    android:background="@color/gainsboro"
+            	    android:ems="10"
+            	    android:fontFamily="@string/title_section1"
+            	    android:gravity="left"
+            	    android:padding="10dp"
+            	    android:text="@string/permanent_teachers"
+            	    android:textColor="@color/black"
+            	    android:textSize="@dimen/subtitle_dimension"
+            	    android:textStyle="bold" />
+	           
 
 	        </RelativeLayout>
 	    </LinearLayout>
