--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -290,6 +290,39 @@
             	    android:textColor="@color/black"
             	    android:textSize="@dimen/subtitle_dimension"
             	    android:textStyle="bold" />
+	           
+	           <TextView
+            	    android:id="@+id/indicator7"
+                	android:layout_width="50dp"
+                	android:layout_height="40dp"
+                	android:layout_alignParentRight="true"
+                	android:layout_below="@+id/indicator6"
+                	android:layout_marginTop="5dp"
+                	android:background="@color/gainsboro"
+                	android:ems="10"
+                	android:fontFamily="@string/title_section1"
+                	android:gravity="center"
+                	android:padding="10dp"
+                	android:textColor="@color/black"
+                	android:textSize="@dimen/subtitle_dimension"
+                	android:textStyle="bold" />
+	           
+	           <TextView
+            	    android:id="@+id/indicator7_text"
+            	    android:layout_width="match_parent"
+            	    android:layout_height="40dp"
+            	    android:layout_alignParentLeft="true"
+            	    android:layout_alignTop="@+id/indicator7"
+            	    android:layout_toLeftOf="@id/indicator7"
+            	    android:background="@color/gainsboro"
+            	    android:ems="10"
+            	    android:fontFamily="@string/title_section1"
+            	    android:gravity="left"
+            	    android:padding="10dp"
+            	    android:text="@string/artistic_works"
+            	    android:textColor="@color/black"
+            	    android:textSize="@dimen/subtitle_dimension"
+            	    android:textStyle="bold" />
 
 	        </RelativeLayout>
 	    </LinearLayout>
