--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,7 +6,8 @@
     <item
         android:id="@+id/action_example"
         android:title="@string/action_example"
-        app:showAsAction="withText|ifRoom"/>
+        app:showAsAction="never"/>
+    <!-- app:showAsAction="withText|ifRoom" -->
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
