--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="title_dimension">24dp</dimen>
     <dimen name="university_dimension">23dp</dimen>
     <dimen name="subtitle_dimension">12dp</dimen>
+    <dimen name="field_dimension">25dp</dimen>
 
 </resources>
