Creating a new field to put the indicator value
Signed-off-by: Elaine Cristina Meirelles <ecmeirelles@hotmail.com>
Signed-off-by: Jonnatas Lennon Lima Costa <jonatas_lenon@hotmail.com>

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -13,5 +13,6 @@
     <dimen name="university_dimension">23dp</dimen>
     <dimen name="subtitle_dimension">12dp</dimen>
     <dimen name="field_dimension">25dp</dimen>
+    <dimen name="between_dimension">20dp</dimen>
 
 </resources>
