Adding callback events.
Signed-off-by: André Bernardes <andrebsguedes@gmail.com>
Signed-off-by: Brenddon Gontijo <brenddongontijo@msn.com>
Signed-off-by: Elaine Cristina Meirelles <ecmeirelles@hotmail.com>
Signed-off-by: Fabio Teixeira <fabio1079@gmail.com>
Signed-off-by: Jonnatas Lenno Lima Costa <jonatas_lenon@hotmail.com>

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="title_dimension">24dp</dimen>
     <dimen name="university_dimension">23dp</dimen>
     <dimen name="subtitle_dimension">12dp</dimen>
+    <dimen name="list_item_dimension">14dp</dimen>
     <dimen name="field_dimension">23dp</dimen>
     <dimen name="between_dimension">17dp</dimen>
 
