--- a/res/layout/ranking_fragment.xml
+++ b/res/layout/ranking_fragment.xml
@@ -16,6 +16,10 @@
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:entries="@array/indicator" />
+        <TextView 
+                       android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"/>
 
         <Spinner
             android:id="@+id/year"
