--- a/res/layout/ranking_fragment.xml
+++ b/res/layout/ranking_fragment.xml
@@ -16,10 +16,6 @@
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:entries="@array/indicator" />
-        <TextView 
-                       android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"/>
 
         <Spinner
             android:id="@+id/year"
@@ -47,7 +43,7 @@
             android:hint="@string/course" />
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/evaluationList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
