--- a/res/layout/ranking_fragment.xml
+++ b/res/layout/ranking_fragment.xml
@@ -31,7 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/course" />
+            android:hint="@string/course"
+            android:singleLine="true" />
 
         <ListView
             android:id="@+id/evaluationList"
