--- a/res/layout/ranking_fragment.xml
+++ b/res/layout/ranking_fragment.xml
@@ -37,9 +37,9 @@
         <ListView
             android:id="@+id/evaluationList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
 
         </ListView>
-
 
 </LinearLayout>
