--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,5 +15,6 @@
     <dimen name="list_item_dimension">14dp</dimen>
     <dimen name="field_dimension">23dp</dimen>
     <dimen name="between_dimension">17dp</dimen>
+    <dimen name="historic_dimension">25dp</dimen>
 
 </resources>
