--- a/res/layout/fragment_historic.xml
+++ b/res/layout/fragment_historic.xml
@@ -5,25 +5,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/Title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/history"
-            android:textSize="@dimen/historic_dimension" />
-    </LinearLayout>
+        android:layout_height="54dp"
+        android:layout_weight="4.50"
+        android:background="@color/medium_green"
+        android:gravity="center"
+        android:text="@string/history"
+        android:textColor="@color/black"
+        android:textSize="@dimen/historic_dimension"
+        android:textStyle="normal" />
 
     <ListView
         android:id="@+id/ListHistoric"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp" >
+        android:layout_height="403dp"
+        android:layout_weight="5.75" >
     </ListView>
 
 </LinearLayout>
