--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -3,7 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
-    
-    	<TextView />
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
+
+    <TextView
+        android:id="@+id/searchBy"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/search_by"
+/>
+
+    <TextView
+        android:id="@+id/indicator"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"     
+        android:background="@color/dark_gray"
+/>
+        
+    </LinearLayout>
 </LinearLayout>
