--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -2,30 +2,88 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal" >
-
 
     <TextView
         android:id="@+id/searchBy"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/search_by"
-/>
+        android:text="@string/search_by" />
 
     <TextView
-        android:id="@+id/indicator"
+        android:id="@+id/option"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"     
-        android:background="@color/dark_gray"
-/>
+        android:background="@color/dark_gray" />
         
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+    <TextView android:id="@+id/by_year" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/byYear" /><TextView android:id="@+id/year" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:background="@color/dark_gray" /></LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/by"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/by_indicator" />
+
+        <TextView
+            android:id="@+id/indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/dark_gray" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/between"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/between" />
+
+        <TextView
+            android:id="@+id/fistValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/dark_gray" />
+
+        <TextView
+            android:id="@+id/and"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/and" />
+
+        <TextView
+            android:id="@+id/secondValue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/dark_gray" />
+    </LinearLayout>
+
 </LinearLayout>
