--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -9,20 +9,19 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/searchBy"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/search_by" />
+        <TextView
+            android:id="@+id/searchBy"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/search_by" />
 
-    <TextView
-        android:id="@+id/option"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"     
-        android:background="@color/dark_gray" />
-        
+        <TextView
+            android:id="@+id/option"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/dark_gray" />
     </LinearLayout>
 
     <LinearLayout
@@ -30,7 +29,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-    <TextView android:id="@+id/by_year" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/byYear" /><TextView android:id="@+id/year" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:background="@color/dark_gray" /></LinearLayout>
+        <TextView
+            android:id="@+id/by_year"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/byYear" />
+
+        <TextView
+            android:id="@+id/year"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/dark_gray" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,7 +77,7 @@
             android:text="@string/between" />
 
         <TextView
-            android:id="@+id/fistValue"
+            android:id="@+id/firstValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
