--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -2,100 +2,121 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/searchBy"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/search_by" />
+            android:background="@color/white"
+            android:text="@string/search_by"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/option"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/dark_gray" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+            android:layout_weight="0.75"
+            android:background="@color/white"
+            android:textAlignment="center"
+            android:textColor="@color/cyan_blue" />
 
         <TextView
             android:id="@+id/by_year"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/byYear" />
+            android:background="@color/white"
+            android:text="@string/byYear"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/year"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/dark_gray" />
+            android:layout_weight="0.60"
+            android:background="@color/white"
+            android:textAlignment="center"
+            android:textColor="@color/cyan_blue" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/by"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/by_indicator" />
+            android:background="@color/white"
+            android:text="@string/by_indicator"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/indicator"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/dark_gray" />
+            android:textAlignment="center"
+            android:background="@color/white"
+            android:textColor="@color/cyan_blue" />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/between"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/between" />
+            android:layout_weight="0.71"
+            android:background="@color/white"
+            android:text="@string/between"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/firstValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/dark_gray" />
+            android:background="@color/white"
+            android:hint="0000001"
+            android:textAlignment="center"
+            android:textColor="@color/cyan_blue" />
 
         <TextView
             android:id="@+id/and"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/and" />
+            android:layout_weight="0.50"
+            android:background="@color/white"
+            android:text="@string/and"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/secondValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/dark_gray" />
+            android:background="@color/white"
+            android:hint="00000001"
+            android:textAlignment="center"
+            android:textColor="@color/cyan_blue" />
+
     </LinearLayout>
 
 </LinearLayout>
