--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="black">#000000</color>
     <color name="dark_gray">#808080</color>
     <color name="gainsboro">#D9D9F3</color>
+    <color name="light_blue">#33B5E5</color>
+    <color name="cyan_blue">#0099CC</color>
 
 </resources>
