--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -20,12 +21,12 @@
             android:textColor="@color/black" />
 
         <TextView
+            android:layout_marginLeft="5dp"
             android:id="@+id/option"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
             android:background="@color/white"
-            android:textAlignment="center"
             android:textColor="@color/cyan_blue" />
 
         <TextView
@@ -37,17 +38,18 @@
             android:textColor="@color/black" />
 
         <TextView
+            android:layout_marginLeft="5dp"
             android:id="@+id/year"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.60"
             android:background="@color/white"
-            android:textAlignment="center"
             android:textColor="@color/cyan_blue" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -62,17 +64,18 @@
             android:textColor="@color/black" />
 
         <TextView
+            android:layout_marginLeft="5dp"
             android:id="@+id/indicator"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAlignment="center"
             android:background="@color/white"
             android:textColor="@color/cyan_blue" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginLeft="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -91,9 +94,8 @@
             android:id="@+id/firstValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.68"
             android:background="@color/white"
-            android:hint="0000001"
             android:textAlignment="center"
             android:textColor="@color/cyan_blue" />
 
@@ -101,7 +103,7 @@
             android:id="@+id/and"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.50"
+            android:layout_weight="0.30"
             android:background="@color/white"
             android:text="@string/and"
             android:textAlignment="center"
@@ -113,7 +115,34 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/white"
-            android:hint="00000001"
+            android:textAlignment="center"
+            android:textColor="@color/cyan_blue" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/searchDateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:text="@string/search_date"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:id="@+id/searchDate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/white"
             android:textAlignment="center"
             android:textColor="@color/cyan_blue" />
 
