--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -7,18 +7,27 @@
         <TextView
             android:id="@+id/position"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:gravity="center"
+            android:layout_height="30dp"
+            android:layout_weight="1" 
+            android:textColor="@color/black"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/university"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2" />
+            android:layout_width="30dp"
+            android:gravity="start"
+            android:layout_height="20dp"
+            android:layout_weight="2" 
+            android:textColor="@color/black"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/data"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:gravity="center"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 </LinearLayout>
