Fragment to choose the year, course and two institutions
(compare)

Signed-off-by: Andre Bernardes <andrebsguedes@gmail.com>

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -16,5 +16,6 @@
     <dimen name="field_dimension">23dp</dimen>
     <dimen name="between_dimension">17dp</dimen>
     <dimen name="historic_dimension">25dp</dimen>
+    <dimen name="label_dimension">17dp</dimen>
 
 </resources>
