Displaying the compare fragment layout
(Compare)

--- a/res/layout/compare_show_list_item.xml
+++ b/res/layout/compare_show_list_item.xml
@@ -15,14 +15,13 @@
 	    	android:textColor="@color/black"
 	    	android:textSize="@dimen/label_dimension"
 	    	android:textStyle="normal" />
-        
-        
+
         <LinearLayout 
         	android:layout_width="match_parent"
 	    	android:layout_height="0dp"
 	    	android:layout_weight="1"
 	    	android:orientation="horizontal" >
-	    	
+
             <TextView
 	    		android:id="@+id/compare_first_institution_indicator"
 	    		android:layout_width="0dp"
@@ -33,15 +32,15 @@
 	    		android:text="Value B"
 	    		android:textColor="@color/black"
 	    		android:textSize="@dimen/label_dimension"
-	    		android:textStyle="normal" 
-	    		/>
+	    		android:textStyle="normal" />
+
             <FrameLayout
                 android:background="@color/black"
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
-                android:layout_weight="0.1"
-                >
+                android:layout_weight="0.1" >
             </FrameLayout>
+
             <TextView
 	    		android:id="@+id/compare_second_institution_indicator"
 	    		android:layout_width="0dp"
