Added button to call the compare show fragment
(Compare)

--- a/res/layout/compare_choose_fragment.xml
+++ b/res/layout/compare_choose_fragment.xml
@@ -31,7 +31,6 @@
 	    		android:layout_width="0dp"
 	    		android:layout_height="match_parent"
 	    		android:layout_weight="2"
-	    		android:background="@color/white"
 	    		android:gravity="center"
 	    		android:text="@string/choose_the_evaluation_year"
 	    		android:textColor="@color/black"
@@ -57,7 +56,13 @@
             android:singleLine="true" />
 
 	</LinearLayout>
-	
+
+	<Button 
+	    android:id="@+id/compare_button"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="@string/title_text_compare" />
+
     <ListView
         android:id="@+id/institutionList"
         android:layout_width="match_parent"
