--- a/res/layout/compare_choose_list_item.xml
+++ b/res/layout/compare_choose_list_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/compare_institution_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onCheckboxClicked"
         android:text="CheckBox" />
 
 </LinearLayout>
