Added compare show fragment, created link from compare choose to compare show fragments, added custom list adapter for compare indicator list.
(compare)

Signed-off-by: Andre Bernardes <andrebsguedes@gmail.com>
Signed-off-by: Fabio Teixeira <fabio1079@gmail.com>

--- a/res/layout/compare_show_fragment.xml
+++ b/res/layout/compare_show_fragment.xml
@@ -42,7 +42,7 @@
 	    		android:textStyle="normal" 
 	    		/>
             <FrameLayout
-                android:background="@color/black"
+                android:background="@color/dark_gray"
                 android:layout_height="match_parent"
                 android:layout_width="0dp"
                 android:layout_weight="0.1"
