--- a/res/layout/compare_choose_fragment.xml
+++ b/res/layout/compare_choose_fragment.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -19,7 +18,7 @@
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="0dp"
-	    android:layout_weight="2"
+	    android:layout_weight="1.7"
 	    android:orientation="vertical">
 	    
 	    <LinearLayout
@@ -57,11 +56,6 @@
 
 	</LinearLayout>
 
-	<Button 
-	    android:id="@+id/compare_button"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/title_text_compare" />
 
     <ListView
         android:id="@+id/institutionList"
