--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -17,5 +17,6 @@
     <dimen name="between_dimension">17dp</dimen>
     <dimen name="historic_dimension">25dp</dimen>
     <dimen name="label_dimension">17dp</dimen>
+    <dimen name="medium_text">16dp</dimen>
 
 </resources>
