--- a/res/layout-land/list_item.xml
+++ b/res/layout-land/list_item.xml
@@ -12,13 +12,21 @@
             android:layout_weight="1" 
             android:textColor="@color/black"
             android:textSize="16sp"/>
+        
+        <ImageView 
+            android:id="@+id/trophyIcon"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+     		android:layout_height="30dp"
+      		android:scaleType="centerInside"
+      		android:contentDescription="@string/trophyImage"/>
 
         <TextView
             android:id="@+id/university"
-            android:layout_width="30dp"
+            android:layout_width="0dp"
             android:gravity="start"
-            android:layout_height="20dp"
-            android:layout_weight="2" 
+            android:layout_height="30dp"
+            android:layout_weight="4" 
             android:textColor="@color/black"
             android:textSize="16sp"/>
 
