--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     
     <color name="white">#FFFFFF</color>
+    <color name="actionbar_title_color">#328F70</color>
     <color name="medium_green">#32CD99</color>
     <color name="medium_dark_green">#4A766E</color>
     <color name="black">#000000</color>
