Fixing some spinner alignment on Ranking and Search fragments and tweaking CompareShow list layout.

--- a/res/layout-land/compare_choose_fragment.xml
+++ b/res/layout-land/compare_choose_fragment.xml
@@ -3,18 +3,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/qc_bg"
     android:orientation="vertical" >
-    
-	<TextView
-	    android:id="@+id/title_compare"
-	    android:layout_width="match_parent"
-	    android:layout_height="0dp"
-	    android:layout_weight="1"
-	    android:background="@color/medium_green"
-	    android:gravity="center"
-	    android:text="@string/title_text_compare"
-	    android:textColor="@color/black"
-	    android:textSize="@dimen/title_dimension"
-	    android:textStyle="normal" />
 
 	<LinearLayout
 	    android:layout_width="match_parent"
@@ -60,8 +48,7 @@
     <ListView
         android:id="@+id/institutionList"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4" >
+        android:layout_height="wrap_content">
     </ListView>
 
 </LinearLayout>
