--- a/res/layout-land/fragment_history.xml
+++ b/res/layout-land/fragment_history.xml
@@ -9,8 +9,7 @@
     <ListView
         android:id="@+id/listHistory"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7" >
+        android:layout_height="match_parent" >
     </ListView>
 
 </LinearLayout>
