--- a/res/layout-land/ranking_fragment.xml
+++ b/res/layout-land/ranking_fragment.xml
@@ -22,6 +22,7 @@
             android:id="@+id/year"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_gravity="bottom"
             android:layout_height="wrap_content"
             android:entries="@array/year" />
 
