--- a/res/layout/compare_show_list_item.xml
+++ b/res/layout/compare_show_list_item.xml
@@ -9,7 +9,7 @@
 	    	android:layout_width="match_parent"
 	    	android:layout_height="0dp"
 	    	android:layout_weight="1"
-			android:background="@color/white"
+			android:background="@color/light_gray"
 	    	android:gravity="center"
 	    	android:textColor="@color/black"
 	    	android:textSize="@dimen/label_dimension"
