--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -61,7 +61,8 @@
         android:gravity="left|fill"
         android:textColor="@color/black"
         android:textSize="@dimen/subtitle_dimension"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:padding="10dp" />
 
     <TextView
         android:id="@+id/indicator"
